# Hello_Rust_FFIs

./: README.md
generate_freertos_rust_bindings/: Cargo.toml  FreeRTOSConfig.h  README.md  bindings.h  build.rs  openocd.cfg
generate_freertos_rust_bindings/.cargo/: config
generate_freertos_rust_bindings/ffi_dummy/: Makefile  dummy.c  freertos_externs.h
generate_freertos_rust_bindings/freertos_gen/: Makefile  c_helpers.c
generate_freertos_rust_bindings/ld/: stm32l475xg.x
generate_freertos_rust_bindings/src/: main.rs
